# TooManyPapers

./: .gitignore  README.md  too-many-papers.plugin
.claude/: settings.local.json
.claude-plugin/: marketplace.json
too-many-papers-plugin/: .mcp.json  README.md
too-many-papers-plugin/.claude-plugin/: plugin.json
too-many-papers-plugin/commands/: webui.md
too-many-papers-plugin/server/: _graph.json  _papers.json  pyproject.toml
too-many-papers-plugin/server/_scripts/: mcp_server.py  papers_api.py
too-many-papers-plugin/server/_templates/: _graph.json  _venues.json
too-many-papers-plugin/skills/too-many-papers/: SKILL.md
too-many-papers-plugin/skills/too-many-papers/references/: mcp-tools.md
too-many-papers-plugin/webui/: launch.py  paper-library-server.js  paper-library.html
